--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="./内网穿透-frp_files/style.css"> <!-- Resource style -->
 	<script src="./内网穿透-frp_files/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>内网穿透-frp</title>
+	<title>个人资料备份</title>
 </head>
 <body>
 
@@ -18,27 +18,18 @@
 <section id="frp" class="cd-section">
 	<div class="content-wrapper">
 	<p align="left"><a href="http://qq.369345707.xyz">&lt;&lt; </a>
-		</p><h2>frp内网穿透</h2>
+		</p><h2>个人资料备份</h2>
 		<p>沙头兴达科技<br>
 
-		frp0.16.1免费服务器信息:<br>
-		连接地址为： frp.369345707.xyz:7000 <br>
-		特权认证密码为：frp888<br>
-		TCP/UDP端口范围为：10000-65535<br>
-		隧道状态查询：<a href="http://frp.369345707.xyz:7500/" target="blank">frp.369345707.xyz:7500</a><br>
-		查询帐号和密码均为：admin<br>
-		<br>
-		备注：frp0.16.1版本的HTTP/HTTPS协议，<br>仅提供*.frp.369345707.xyz形式域名的80/443端口的使用。<br>
-		<br>
+
 		
 	
-    <a href="http://frp.369345707.xyz/frp.bat">FRP客户端与服务端通用脚本</a><br>
 	<br>	
-	注：只需要下载通用脚本即可自动下载程序。<br><br>
-	通用脚本使用方法为：<br>
-	Windows系统：双击 frp.bat<br>
-	Linux系统：curl -kLs -o frp.bat http://frp.369345707.xyz/frp.bat;sh frp.bat  <br>
-	mac 系统： curl -kLs -o frp.bat http://frp.369345707.xyz/frp.bat;sh frp.bat  <br>
+
+	NPS一键安装：<br>
+
+	Linux系统：bash <(curl -L -s https://opt.cn2qq.com/opt-script/nps.sh)  <br>
+
 	
 	
 		<br>
