--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
 		
 		</p>
 		<p>
-		<a href="http://frp.369345707.xyz/frps_ini.html">服务端配置文件在线生成</a><br>
-		<a href="http://frp.369345707.xyz/frpc_ini.html">客户端配置文件在线生成</a><br>
+		<a href="http://1111.bw029.ga:66">家里黑群辉80端口可道云</a><br>
+		<a href="http://1112.bw029.ga:66">家里黑裙辉5000端口群辉</a><br>
+		<a href="http://1113.bw029.ga:66">家里黑裙辉7777端口文件</a><br>
+		<a href="http://1114.bw029.ga:66">家里黑裙辉虚拟机openwrt</a><br>
+		<a href="http://1121.bw029.ga:66">店里黑裙辉80端口可道云</a><br>
+		<a href="http://1122.bw029.ga:66">店里黑裙辉5000端口群辉</a><br>
+		<a href="http://1123.bw029.ga:66">店里黑裙辉7777端口文件</a><br>
+		<a href="http://1131.bw029.ga:66">华建黑裙辉80端口可道云</a><br>
+		<a href="http://1112.bw029.ga:66">华建黑裙辉5000端口群辉</a><br>
+		<a href="http://1112.bw029.ga:66">华建黑裙辉7777端口文件</a><br>
+		<a href="http://1112.bw029.ga:66">华建黑裙辉水星AC管理器</a><br>
 		</p>
 		
 	</div>
