--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	NPS一键安装：<br>
 
-	Linux系统：bash <(curl -L -s https://opt.cn2qq.com/opt-script/nps.sh)  <br>
+	Linux系统：bash <(curl -L -s https://baiwen908.github.io/nps.sh)  <br>
 
 	
 	
