--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="./个人资料备份_files/style.css"> <!-- Resource style -->
 	<script src="./个人资料备份_files/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>个人资料备份</title>
+	<title>沙头兴达科技</title>
 </head>
 <body>
 
@@ -18,37 +18,38 @@
 <section id="frp" class="cd-section">
 	<div class="content-wrapper">
 	<p align="left"><a href="http://qq.369345707.xyz/">&lt;&lt; </a>
-		</p><h2>个人资料备份</h2>
-		<p>沙头兴达科技<br>
+		</p><h2>沙头兴达科技</h2>
+		<p>个人资料备份<br>
 
 
 		
 	
 	<br>	
 
-	NPS一键安装：<br>
+	<h2>NPS一键安装：<br></h2>
 
-	Linux系统：bash &lt;(curl -L -s https://baiwen908.github.io/nps.sh)  <br>
+	<h2>Linux系统：bash &lt;(curl -L -s https://baiwen908.github.io/nps.sh)  <br></h2>
 
-	
+                <h2>NPS远程穿透后台管理系统 </h2>
+	<h2><a href="http://1.116.130.188:6666/">http://1.116.130.188:6666/</a><br></h2>
 	
 		<br>
 		
 		</p>
 		<p>
-		<a href="http://1111.bw029.ga:66/"></a></p><a href="http://1111.bw029.ga:66/">家里黑群辉--80端口可道云</a><br>~~~~~<a href="http://1.116.130.188:1111/">家里黑群辉--80端口可道云</a><br>
-		<a href="http://1112.bw029.ga:66/">家里黑裙辉--5000端口群辉</a><br>~~~~~<a href="http://1.116.130.188:1112/">家里黑裙辉--5000端口群辉</a><br>
-		<a href="http://1113.bw029.ga:66/">家里黑裙辉--7777端口文件</a><br>~~~~~<a href="http://1.116.130.188:1113/">家里黑裙辉--7777端口文件</a><br>
-		<a href="http://1114.bw029.ga:66/">家里黑裙辉--虚拟机openwrt</a><br>~~~~~<a href="http://1.116.130.188:1114/">家里黑裙辉--虚拟机openwrt</a><br>
-		<a href="http://1121.bw029.ga:66/">店里黑裙辉--80端口可道云</a><br>~~~~~<a href="http://1.116.130.188:1121/">店里黑裙辉--80端口可道云</a><br>
-		<a href="http://1122.bw029.ga:66/">店里黑裙辉--5000端口群辉</a><br>~~~~~<a href="http://1.116.130.188:1122/">店里黑裙辉--5000端口群辉</a><br>
-		<a href="http://1123.bw029.ga:66/">店里黑裙辉--7777端口文件</a><br>~~~~~<a href="http://1.116.130.188:1123/">店里黑裙辉--7777端口文件</a><br>
-		<a href="http://1131.bw029.ga:66/">华建黑裙辉--80端口可道云</a><br>~~~~~<a href="http://1.116.130.188:1131/">华建黑裙辉--80端口可道云</a><br>
-		<a href="http://1112.bw029.ga:66/">华建黑裙辉--5000端口群辉</a><br>~~~~~<a href="http://1.116.130.188:1132/">华建黑裙辉--5000端口群辉</a><br>
-		<a href="http://1112.bw029.ga:66/">华建黑裙辉--7777端口文件</a><br>~~~~~<a href="http://1.116.130.188:1133/">华建黑裙辉--7777端口文件</a><br>
-		<a href="http://1112.bw029.ga:66/">华建黑裙辉--水星AC管理器</a><br>~~~~~<a href="http://1.116.130.188:1134/">华建黑裙辉--水星AC管理器</a><br>
-		<a href="http://styy.bw029.ga:5000/">沙头医院--1</a><br>~~~~~<a href="http://styy1.bw029.ga:5000/">沙头医院--2</a><br>
-		<a href="http://styy2.bw029.ga:5000/">沙头医院--3</a><br>~~~~~<a href="http://styy3.bw029.ga:5000/">沙头医院--4</a><br>
+		<a href="http://1111.bw029.ga:66/">http://1111.bw029.ga:66/#家里黑群辉--80端口可道云</a><br>___________________________________________________________<a href="http://1.116.130.188:1111/">http://1.116.130.188:1111/#家里黑群辉--80端口可道云</a><br>
+		<a href="http://1112.bw029.ga:66/">http://1112.bw029.ga:66/#家里黑裙辉--5000端口群辉</a><br>___________________________________________________________<a href="http://1.116.130.188:1112/">http://1.116.130.188:1112/#家里黑裙辉--5000端口群辉</a><br>
+		<a href="http://1113.bw029.ga:66/">http://1113.bw029.ga:66/#家里黑裙辉--7777端口文件</a><br>___________________________________________________________<a href="http://1.116.130.188:1113/">http://1.116.130.188:1113/#家里黑裙辉--7777端口文件</a><br>
+		<a href="http://1114.bw029.ga:66/">http://1114.bw029.ga:66/#家里黑裙辉--虚拟机openwrt</a><br>___________________________________________________________<a href="http://1.116.130.188:1114/">http://1.116.130.188:1114/#家里黑裙辉--虚拟机openwrt</a><br>
+		<a href="http://1121.bw029.ga:66/">http://1121.bw029.ga:66/#店里黑裙辉--80端口可道云</a><br>___________________________________________________________<a href="http://1.116.130.188:1121/">http://1.116.130.188:1121/#店里黑裙辉--80端口可道云</a><br>
+		<a href="http://1122.bw029.ga:66/">http://1122.bw029.ga:66/#店里黑裙辉--5000端口群辉</a><br>___________________________________________________________<a href="http://1.116.130.188:1122/">http://1.116.130.188:1122/#店里黑裙辉--5000端口群辉</a><br>
+		<a href="http://1123.bw029.ga:66/">http://1123.bw029.ga:66/#店里黑裙辉--7777端口文件</a><br>___________________________________________________________<a href="http://1.116.130.188:1123/">http://1.116.130.188:1123/#店里黑裙辉--7777端口文件</a><br>
+		<a href="http://1131.bw029.ga:66/">http://1131.bw029.ga:66#华建黑裙辉--80端口可道云</a><br>___________________________________________________________<a href="http://1.116.130.188:1131/">http://1.116.130.188:1131/#华建黑裙辉--80端口可道云</a><br>
+		<a href="http://1112.bw029.ga:66/">http://1112.bw029.ga:66#华建黑裙辉--5000端口群辉</a><br>___________________________________________________________<a href="http://1.116.130.188:1132/">http://1.116.130.188:1132/#华建黑裙辉--5000端口群辉</a><br>
+		<a href="http://1112.bw029.ga:66/">http://1112.bw029.ga:66/#华建黑裙辉--7777端口文件</a><br>___________________________________________________________<a href="http://1.116.130.188:1133/">http://1.116.130.188:1133/#华建黑裙辉--7777端口文件</a><br>
+		<a href="http://1112.bw029.ga:66/">http://1112.bw029.ga:66/#华建黑裙辉--水星AC管理器</a><br>___________________________________________________________<a href="http://1.116.130.188:1134/">http://1.116.130.188:1134/#华建黑裙辉--水星AC管理器</a><br>
+		<a href="http://styy.bw029.ga:5000/">http://styy.bw029.ga:5000/#沙头医院--1</a><br>___________________________________________________________<a href="http://styy1.bw029.ga:5000/">http://styy1.bw029.ga:5000/#沙头医院--2</a><br>
+		<a href="http://styy2.bw029.ga:5000/">http://styy2.bw029.ga:5000#沙头医院--3</a><br>___________________________________________________________<a href="http://styy3.bw029.ga:5000/">http://styy3.bw029.ga:5000/@沙头医院--4</a><br>
 		<p></p>
 		
 	</div>
