--- a/index.html
+++ b/index.html
@@ -55,7 +55,48 @@
 	</div>
 </section><!-- cd-section -->
 
-
+<p>静态路由命令
+<p>1、先将外网网卡按正常配置好。再配置内网网卡，注意内网默认网关留空；
+<p>2、route print一下，确认0.0.0.0从走外网网关；
+<p>若当前默认不是外网网关，用管理员身份启动cmd，先route delete 0.0.0.0， 
+<p>再route add 0.0.0.0 mask 0.0.0.0 zzz.zzz.zzz.zzz（外网关）。 
+<p>3、route add 192.168.100.0 mask 255.255.255.0 192.168.100.1 -p           -p表示添加静态路由，即重启后不会丢失
+<p>route delete 0.0.0.0删除静态路由
+<p>会计室
+<p>route add 172.21.0.0 mask 255.255.255.0 192.168.1.250 -p
+<p>档案室
+<p>route add 172.21.0.0 mask 255.255.255.0 192.168.11.250 -p
+<p>led屏幕网卡mac  00-36-48-48-20-30
+<p>倒闸 电脑ip  192.168.1.200
+<p>192.168.1.202
+<p>192.168.1.204
+<p>admin
+<p>车牌号码添加至白名单即可
+<p>Hin@c0m
+<p>624624
+<p>服务器密码
+<p>扬州市广陵区沙头社区卫生服务中心
+<p>123210024688654800
+<p>单位名称   扬州市广陵区沙头社  区卫生服务中心    地址  扬州市广陵区沙头镇    qq  369345707    管理员 账号  stwhj  密码 141516
+<p>cloud.dt128.com      stwhj  141516
+<p>bw029   7531029
+<p>ping 10.77.149.10 -t  医保官网
+<p>10.64.228.1  255
+<p>255.255.255.0
+<p>10.64.228.254   健康平台 广电地址
+<p>32.110.139.18:8000/Login.aspx
+<p>32.110.139.12/index.aspx
+<p>151.16.6.187
+<p>255.255.255.248
+<p>151.16.6.185
+<p>yza0007538429   87538429
+<p>192.168.10.1
+<p>内网 32.110.139.12
+<p>四楼外网192.168.1.1
+<p>四楼内网192.168.0.1
+<p>赵健东192.168.11.1
+<p>四楼档案室110.110.110.1
+<p>05148756455  87536455
 	
 <script src="./个人资料备份_files/jquery-2.1.4.js"></script>
 <script src="./个人资料备份_files/main.js"></script></body></html>
