--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		</p><h2>沙头兴达科技</h2>
 		<p>个人资料备份<br>
 
-
+	<h2><a href="http://1112.bw029.ga:66/sharing/9x3c991Fi">家里黑群辉分享链接</a><br></h2>
+	<h2><a href="http://1111.bw029.ga:66/#s/69S2cNfg">家里可道云分享链接</a><br></h2>
 		
 	
 	<br>	
