--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
 	<h2><a href="http://1112.bw029.ga:66/sharing/9x3c991Fi">家里黑群辉分享链接</a><br></h2>
 	<h2><a href="http://1111.bw029.ga:66/#s/69S2cNfg">家里可道云分享链接</a><br></h2>
-		
+	<h2><a href="http://1122.bw029.ga:66/sharing/O1WRz5NFO">店里黑群辉分享链接</a><br></h2>
+	<h2><a href="http://1121.bw029.ga:66/#s/69jmVoHA">店里可道云分享链接</a><br></h2>
+	<h2><a href="http://baidu.com">华建黑群辉分享链接</a><br></h2>
+	<h2><a href="http://baidu.com">华建可道云分享链接</a><br></h2>		
 	
 	<br>	
 
