--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<h2><a href="http://1111.bw029.ga:66/#s/69S2cNfg">家里可道云分享链接</a><br></h2>
 	<h2><a href="http://1122.bw029.ga:66/sharing/O1WRz5NFO">店里黑群辉分享链接</a><br></h2>
 	<h2><a href="http://1121.bw029.ga:66/#s/69jmVoHA">店里可道云分享链接</a><br></h2>
-	<h2><a href="http://baidu.com">华建黑群辉分享链接</a><br></h2>
-	<h2><a href="http://baidu.com">华建可道云分享链接</a><br></h2>		
+	<h2><a href="http://1132.bw029.ga:66/sharing/19xpiFtmY">华建黑群辉分享链接</a><br></h2>
+	<h2><a href="http://1131.bw029.ga:66/#s/69m_mSFA">华建可道云分享链接</a><br></h2>		
 	
 	<br>	
 
