--- a/index.html
+++ b/index.html
@@ -1,103 +1,92 @@
-<!DOCTYPE html>
-<!-- saved from url=(0028)https://baiwen908.github.io/ -->
-<html lang="en" class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" style=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<link href="./个人资料备份_files/css.css" rel="stylesheet" type="text/css">
+<title>沙头兴达科技</title>
 
-	<link rel="stylesheet" href="./个人资料备份_files/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="./个人资料备份_files/style.css"> <!-- Resource style -->
-	<script src="./个人资料备份_files/modernizr.js"></script> <!-- Modernizr -->
-  	
-	<title>沙头兴达科技</title>
-</head>
-<body>
+</p><h2>沙头兴达科技</h2>
+<h2><a href="https://baiwen908.github.io">沙头兴达科技</a><br></h2>
+<p>个人资料备份<br>
 
-
-<section id="frp" class="cd-section">
-	<div class="content-wrapper">
-	<p align="left"><a href="http://1131.bw029.ga:66/1.html">&lt;&lt; </a>
-		</p><h2>沙头兴达科技</h2>
-		<p>个人资料备份<br>
-
-	<h2><a href="http://1112.bw029.ga:66/sharing/9x3c991Fi">家里黑群辉分享链接</a><br></h2>
-	<h2><a href="http://1111.bw029.ga:66/#s/69S2cNfg">家里可道云分享链接</a><br></h2>
-	<h2><a href="http://1122.bw029.ga:66/sharing/O1WRz5NFO">店里黑群辉分享链接</a><br></h2>
-	<h2><a href="http://1121.bw029.ga:66/#s/69jmVoHA">店里可道云分享链接</a><br></h2>
-	<h2><a href="http://1132.bw029.ga:66/sharing/19xpiFtmY">华建黑群辉分享链接</a><br></h2>
-	<h2><a href="http://1131.bw029.ga:66/#s/69m_mSFA">华建可道云分享链接</a><br></h2>		
-	
 	<br>	
 
 	<h2>NPS一键安装：<br></h2>
 
 	<h2>Linux系统：bash &lt;(curl -L -s https://baiwen908.github.io/nps.sh)  <br></h2>
 
-                <h2>NPS远程穿透后台管理系统 </h2>
-	<h2><a href="http://1.116.130.188:6666/">http://1.116.130.188:6666/</a><br></h2>
-	
-		<br>
-		
-		</p>
-		<p>
-		<h2>①
-                                <a href="http://1111.bw029.ga:66/">http://1111.bw029.ga:66/#家里黑群辉--80端口可道云</a><br></h2>
-                                   <h2>②
-                                <a href="http://1.116.130.188:1111/">http://1.116.130.188:1111/#家里黑群辉--80端口可道云</a><br></h2>
-		<h2>③
-                                <a href="http://1112.bw029.ga:66/">http://1112.bw029.ga:66/#家里黑裙辉--5000端口群辉</a><br></h2>
-		<h2>④
-                                <a href="http://1.116.130.188:1112/">http://1.116.130.188:1112/#家里黑裙辉--5000端口群辉</a><br></h2>
-		<h2>⑤
-                                <a href="http://1113.bw029.ga:66/">http://1113.bw029.ga:66/#家里黑裙辉--7777端口文件</a><br></h2>
-		<h2>⑥
-                                <a href="http://1.116.130.188:1113/">http://1.116.130.188:1113/#家里黑裙辉--7777端口文件</a><br></h2>
-		<h2>⑦
-                                <a href="http://1114.bw029.ga:66/">http://1114.bw029.ga:66/#家里黑裙辉--虚拟机openwrt</a><br></h2>
-		<h2>⑧
-                                <a href="http://1.116.130.188:1114/">http://1.116.130.188:1114/#家里黑裙辉--虚拟机openwrt</a><br></h2>
-		<h2>⑨
-                                <a href="http://1121.bw029.ga:66/">http://1121.bw029.ga:66/#店里黑裙辉--80端口可道云</a><br></h2>
-		<h2>⑩
-                                <a href="http://1.116.130.188:1121/">http://1.116.130.188:1121/#店里黑裙辉--80端口可道云</a><br></h2>
-		<h2>⑩①
-                                <a href="http://1122.bw029.ga:66/">http://1122.bw029.ga:66/#店里黑裙辉--5000端口群辉</a><br></h2>
-		<h2>⑩②
-                                <a href="http://1.116.130.188:1122/">http://1.116.130.188:1122/#店里黑裙辉--5000端口群辉</a><br></h2>
-		<h2>⑩③
-                                <a href="http://1123.bw029.ga:66/">http://1123.bw029.ga:66/#店里黑裙辉--7777端口文件</a><br></h2>
-		<h2>⑩④
-                                <a href="http://1.116.130.188:1123/">http://1.116.130.188:1123/#店里黑裙辉--7777端口文件</a><br></h2>
-		<h2>⑩⑤
-                                <a href="http://1131.bw029.ga:66/">http://1131.bw029.ga:66#华建黑裙辉--80端口可道云</a><br></h2>
-		<h2>⑩⑥
-                                <a href="http://1.116.130.188:1131/">http://1.116.130.188:1131/#华建黑裙辉--80端口可道云</a><br></h2>
-		<h2>⑩⑦
-                                <a href="http://1132.bw029.ga:66/">http://1132.bw029.ga:66#华建黑裙辉--5000端口群辉</a><br></h2>
-		<h2>⑩⑧
-                                <a href="http://1.116.130.188:1132/">http://1.116.130.188:1132/#华建黑裙辉--5000端口群辉</a><br></h2>
-		<h2>⑩⑨
-                                <a href="http://1133.bw029.ga:66/">http://1133.bw029.ga:66/#华建黑裙辉--7777端口文件</a><br></h2>
-		<h2>⑩⑩
-                                <a href="http://1.116.130.188:1133/">http://1.116.130.188:1133/#华建黑裙辉--7777端口文件</a><br></h2>
-		<h2>⑩⑩①
-                                <a href="http://1134.bw029.ga:66/">http://1134.bw029.ga:66/#华建黑裙辉--水星AC管理器</a><br></h2>
-		<h2>⑩⑩②
-                                <a href="http://1.116.130.188:1134/">http://1.116.130.188:1134/#华建黑裙辉--水星AC管理器</a><br></h2>
-		<h2>⑩⑩③
-                                <a href="http://styy.bw029.ga:5000/">http://styy.bw029.ga:5000/#沙头医院--1</a><br></h2>
-		<h2>⑩⑩④
-                                <a href="http://styy1.bw029.ga:5000/">http://styy1.bw029.ga:5000/#沙头医院--2</a><br></h2>
-		<h2>⑩⑩⑤
-                                <a href="http://styy2.bw029.ga:5000/">http://styy2.bw029.ga:5000#沙头医院--3</a><br></h2>
-		<h2>⑩⑩⑥
-                                <a href="http://styy3.bw029.ga:5000/">http://styy3.bw029.ga:5000/@沙头医院--4</a><br></h2>
-		<p></p>
-		
-	</div>
-</section><!-- cd-section -->
 
+	<a href="http://1.116.130.188:6666"><button><h2>NPS远程穿透后台管理系统</h2></button></a>
+		<br>
+
+<p>
+
+<a href="http://1112.bw029.ga:66/sharing/9x3c991Fi"><button><h2>家里黑群辉分享链接</h2></button></a>
+
+<a href="http://1111.bw029.ga:66/#s/69S2cNfg"><button><h2>家里可道云分享链接</h2></button></a>
+<p>
+<a href="http://1122.bw029.ga:66/sharing/O1WRz5NFO"><button><h2>店里黑群辉分享链接</h2></button></a>
+
+<a href="http://1121.bw029.ga:66/#s/69jmVoHA"><button><h2>店里可道云分享链接</h2></button></a>
+<p>
+<a href="http://1132.bw029.ga:66/sharing/19xpiFtmY"><button><h2>华建黑群辉分享链接</h2></button></a>
+
+<a href="http://1131.bw029.ga:66/#s/69m_mSFA"><button><h2>华建可道云分享链接</h2></button></a>
+<p>
+
+<a href="http://1111.bw029.ga:66/"><button><h2>家里黑群辉--80端口可道云</h2></button></a>
+                               
+<a href="http://1.116.130.188:1111/"><button><h2>家里黑群辉--80端口可道云</h2></button></a>
+
+<a href="http://1112.bw029.ga:66/"><button><h2>家里黑裙辉--5000端口群辉</h2></button></a>
+
+<a href="http://1.116.130.188:1112/"><button><h2>家里黑裙辉--5000端口群辉</h2></button></a>
+<p>
+<a href="http://1113.bw029.ga:66/"><button><h2>家里黑裙辉--7777端口文件</h2></button></a>
+
+<a href="http://1.116.130.188:1113/"><button><h2>家里黑裙辉--7777端口文件</h2></button></a>
+
+<a href="http://1114.bw029.ga:66/"><button><h2>家里黑裙辉--虚拟机openwrt</h2></button></a>
+
+<a href="http://1.116.130.188:1114/"><button><h2>家里黑裙辉--虚拟机openwrt</h2></button></a>
+<p>
+<a href="http://1121.bw029.ga:66/"><button><h2>店里黑裙辉--80端口可道云</h2></button></a>
+
+<a href="http://1.116.130.188:1121/"><button><h2>店里黑裙辉--80端口可道云</h2></button></a>
+
+<a href="http://1122.bw029.ga:66/"><button><h2>店里黑裙辉--5000端口群辉</h2></button></a>
+
+<a href="http://1.116.130.188:1122/"><button><h2>店里黑裙辉--5000端口群辉</h2></button></a>
+<p>
+<a href="http://1123.bw029.ga:66/"><button><h2>店里黑裙辉--7777端口文件</h2></button></a>
+
+<a href="http://1.116.130.188:1123/"><button><h2>店里黑裙辉--7777端口文件</h2></button></a>
+
+<a href="http://1131.bw029.ga:66/"><button><h2>华建黑裙辉--80端口可道云</h2></button></a>
+
+<a href="http://1.116.130.188:1131/"><button><h2>华建黑裙辉--80端口可道云</h2></button></a>
+<p>
+<a href="http://1132.bw029.ga:66/"><button><h2>华建黑裙辉--5000端口群辉</h2></button></a>
+
+<a href="http://1.116.130.188:1132/"><button><h2>华建黑裙辉--5000端口群辉</h2></button></a>
+
+<a href="http://1133.bw029.ga:66/"><button><h2>华建黑裙辉--7777端口文件</h2></button></a>
+
+<a href="http://1.116.130.188:1133/"><button><h2>华建黑裙辉--7777端口文件</h2></button></a>
+<p>
+<a href="http://1134.bw029.ga:66/"><button><h2>华建黑裙辉--水星AC管理器</h2></button></a>
+
+<a href="http://1.116.130.188:1134/"><button><h2>华建黑裙辉--水星AC管理器</h2></button></a>
+
+<a href="http://styy.bw029.ga:5000/"><button><h2>沙头医院--1</h2></button></a>
+
+<a href="http://styy1.bw029.ga:5000/"><button><h2>沙头医院--2</h2></button></a>
+<p>
+<a href="http://styy2.bw029.ga:5000/"><button><h2>沙头医院--3</h2></button></a>
+
+<a href="http://styy3.bw029.ga:5000/"><button><h2>沙头医院--4</h2></button></a>
+
+<p>
+//以下是自动跳转命令
+<script>
+setTimeout("javascript:location.href='http://1131.bw029.ga:66/#s/69m_mSFA'", 50000);
+</script>
+<p>
 <p>静态路由命令
 <p>1、先将外网网卡按正常配置好。再配置内网网卡，注意内网默认网关留空；
 <p>2、route print一下，确认0.0.0.0从走外网网关；
@@ -140,6 +129,26 @@
 <p>赵健东192.168.11.1
 <p>四楼档案室110.110.110.1
 <p>05148756455  87536455
-	
-<script src="./个人资料备份_files/jquery-2.1.4.js"></script>
-<script src="./个人资料备份_files/main.js"></script></body></html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
