--- a/index.html
+++ b/index.html
@@ -1,8 +1,42 @@
-<title>沙头兴达科技</title>
+<title>沙头兴达科技-私有网盘By:柏文</title>
 
-</p><h2>沙头兴达科技</h2>
-<h2><a href="https://baiwen908.github.io">沙头兴达科技</a><br></h2>
-<p>个人资料备份<br>
+</p><h2>欢迎使用沙头兴达科技网盘By:柏文</h2>
+<h2>本公司从事电脑安装与维修、打印机调试安装、监控安装与维修、网络维护等业务。<br></h2>
+<h2>到店安装系统50元起，上门安装系统80元起，其他价格请咨询，所有价格由本公司有最终解释权！<br></h2>
+<h2><a href="http://98.9998.ga:8000/d/d7f22e4ce5df46e1a375/" target='_BLANK'>微信:15052527289</a><br></h2>
+<h2><a href="http://42.192.40.210:8888/down/ccwkXQDA71GP" target='_BLANK'>QQ:369345707</a><br></h2>
+<h2><a href="http://kdy-h.9998.ga:66/#s/69m_mSFA" target='_BLANK'>联系电话:15052527289/17751384029/17751334029</a><br></h2>
+
+	<h2>请选择需要打开的网盘<br></h2>
+
+
+<p>
+
+<a href="http://98.9998.ga:8000/d/d7f22e4ce5df46e1a375/" target='_BLANK'><button><h2>网盘一（密码：99998888）</h2></button></a>
+<p>
+<a href="http://42.192.40.210:8888/down/ccwkXQDA71GP" target='_BLANK'><button><h2>网盘二（密码9998）</h2></button></a>
+<p>
+<a href="http://kdy-h.9998.ga:66/#s/69m_mSFA" target='_BLANK'><button><h2>网盘三（密码531287）</h2></button></a>
+<p>
+
+
+
+<!--以下是自动跳转命令
+<script>
+setTimeout("javascript:location.href='http://1131.bw029.ga:66/#s/69m_mSFA'", 50000);
+</script>
+-->
+
+
+<!--
+<p>是换行的意思
+target='_BLANK'是新窗口打开超链接
+https://bw029.github.io
+https://baiwen908.github.io
+b1
+
+
+
 
 	<br>	
 
@@ -11,76 +45,13 @@
 	<h2>Linux系统：bash &lt;(curl -L -s https://baiwen908.github.io/nps.sh)  <br></h2>
 
 
-	<a href="http://1.116.130.188:6666"><button><h2>NPS远程穿透后台管理系统</h2></button></a>
+	<a href="http://42.192.40.210:6666"><button><h2>NPS远程穿透后台管理系统</h2></button></a>
 		<br>
 
 <p>
 
-<a href="http://1112.bw029.ga:66/sharing/9x3c991Fi"><button><h2>家里黑群辉分享链接</h2></button></a>
 
-<a href="http://1111.bw029.ga:66/#s/69S2cNfg"><button><h2>家里可道云分享链接</h2></button></a>
-<p>
-<a href="http://1122.bw029.ga:66/sharing/O1WRz5NFO"><button><h2>店里黑群辉分享链接</h2></button></a>
-
-<a href="http://1121.bw029.ga:66/#s/69jmVoHA"><button><h2>店里可道云分享链接</h2></button></a>
-<p>
-<a href="http://1132.bw029.ga:66/sharing/19xpiFtmY"><button><h2>华建黑群辉分享链接</h2></button></a>
-
-<a href="http://1131.bw029.ga:66/#s/69m_mSFA"><button><h2>华建可道云分享链接</h2></button></a>
-<p>
-
-<a href="http://1111.bw029.ga:66/"><button><h2>家里黑群辉--80端口可道云</h2></button></a>
-                               
-<a href="http://1.116.130.188:1111/"><button><h2>家里黑群辉--80端口可道云</h2></button></a>
-
-<a href="http://1112.bw029.ga:66/"><button><h2>家里黑裙辉--5000端口群辉</h2></button></a>
-
-<a href="http://1.116.130.188:1112/"><button><h2>家里黑裙辉--5000端口群辉</h2></button></a>
-<p>
-<a href="http://1113.bw029.ga:66/"><button><h2>家里黑裙辉--7777端口文件</h2></button></a>
-
-<a href="http://1.116.130.188:1113/"><button><h2>家里黑裙辉--7777端口文件</h2></button></a>
-
-<a href="http://1114.bw029.ga:66/"><button><h2>家里黑裙辉--虚拟机openwrt</h2></button></a>
-
-<a href="http://1.116.130.188:1114/"><button><h2>家里黑裙辉--虚拟机openwrt</h2></button></a>
-<p>
-<a href="http://1121.bw029.ga:66/"><button><h2>店里黑裙辉--80端口可道云</h2></button></a>
-
-<a href="http://1.116.130.188:1121/"><button><h2>店里黑裙辉--80端口可道云</h2></button></a>
-
-<a href="http://1122.bw029.ga:66/"><button><h2>店里黑裙辉--5000端口群辉</h2></button></a>
-
-<a href="http://1.116.130.188:1122/"><button><h2>店里黑裙辉--5000端口群辉</h2></button></a>
-<p>
-<a href="http://1123.bw029.ga:66/"><button><h2>店里黑裙辉--7777端口文件</h2></button></a>
-
-<a href="http://1.116.130.188:1123/"><button><h2>店里黑裙辉--7777端口文件</h2></button></a>
-
-<a href="http://1131.bw029.ga:66/"><button><h2>华建黑裙辉--80端口可道云</h2></button></a>
-
-<a href="http://1.116.130.188:1131/"><button><h2>华建黑裙辉--80端口可道云</h2></button></a>
-<p>
-<a href="http://1132.bw029.ga:66/"><button><h2>华建黑裙辉--5000端口群辉</h2></button></a>
-
-<a href="http://1.116.130.188:1132/"><button><h2>华建黑裙辉--5000端口群辉</h2></button></a>
-
-<a href="http://1133.bw029.ga:66/"><button><h2>华建黑裙辉--7777端口文件</h2></button></a>
-
-<a href="http://1.116.130.188:1133/"><button><h2>华建黑裙辉--7777端口文件</h2></button></a>
-<p>
-<a href="http://1134.bw029.ga:66/"><button><h2>华建黑裙辉--水星AC管理器</h2></button></a>
-
-<a href="http://1.116.130.188:1134/"><button><h2>华建黑裙辉--水星AC管理器</h2></button></a>
-
-<a href="http://styy.bw029.ga:5000/"><button><h2>沙头医院--1</h2></button></a>
-
-<a href="http://styy1.bw029.ga:5000/"><button><h2>沙头医院--2</h2></button></a>
-<p>
-<a href="http://styy2.bw029.ga:5000/"><button><h2>沙头医院--3</h2></button></a>
-
-<a href="http://styy3.bw029.ga:5000/"><button><h2>沙头医院--4</h2></button></a>
-
+<!--
 <p>
 //以下是自动跳转命令
 <script>
@@ -131,7 +102,7 @@ setTimeout("javascript:location.href='http://1131.bw029.ga:66/#s/69m_mSFA'", 500
 <p>05148756455  87536455
 
 
-
+-->
 
 
 
