--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 <a href="http://kdy-h.9998.ga:66/#s/69m_mSFA" target='_BLANK'><button><h2>网盘三（密码531287）</h2></button></a>
 <p>
 
+        <br>
+	<h2>NPS一键安装：<br></h2>
+
+	<h2>Linux系统：bash &lt;(curl -L -s https://baiwen908.github.io/nps.sh)  <br></h2>
+
+
+	<a href="http://42.192.40.210:6666" target='_BLANK'b1><button><h2>NPS远程穿透后台管理系统</h2></button></a>
+		<br>
 
 
 <!--以下是自动跳转命令
