--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
 
 
 	<a href="http://42.192.40.210:6666" target='_BLANK'b1><button><h2>NPS远程穿透后台管理系统</h2></button></a>
+
+	<a href="http://42.192.40.210:8888/baiwen" target='_BLANK'b1><button><h2>腾讯云服务器2024年11月到期</h2></button></a>
+
+	<a href="http://wp.9998.ga:98" target='_BLANK'b1><button><h2>http://wp.9998.ga:98</h2></button></a>
+
+	<a href="http://op-j.9998.ga:66" target='_BLANK'b1><button><h2>OPENWRT</h2></button></a>
+
+	<a href="http://qh-j.9998.ga:66" target='_BLANK'b1><button><h2>QUNHUI</h2></button></a>
+
+	<a href="http://kdy-j.9998.ga:66" target='_BLANK'b1><button><h2>KDY</h2></button></a>
+
+	<a href="http://op-d.9998.ga:66" target='_BLANK'b1><button><h2>OPENWRT</h2></button></a>
+
+	<a href="http://qh-d.9998.ga:66" target='_BLANK'b1><button><h2>QUNHUI</h2></button></a>
+
+	<a href="http://kdy-d.9998.ga:66" target='_BLANK'b1><button><h2>KDY</h2></button></a>
+
+	<a href="http://qh-h.9998.ga:66" target='_BLANK'b1><button><h2>QUNHUI</h2></button></a>
+
+	<a href="http://kdy-h.9998.ga:66" target='_BLANK'b1><button><h2>KDY</h2></button></a>
+
+
+	<a href="http://1.116.130.188:6666/" target='_BLANK'b1><button><h2>http://1.116.130.188:6666/</h2></button></a>
+
+
+http://1.116.130.188:6666/   h
 		<br>
 
 
@@ -54,6 +80,15 @@ b1
 
 
 	<a href="http://42.192.40.210:6666"><button><h2>NPS远程穿透后台管理系统</h2></button></a>
+
+	<a href="http://42.192.40.210:6666"><button><h2>NPS远程穿透后台管理系统</h2></button></a>
+
+
+
+http://1.116.130.188:6666/
+
+
+
 		<br>
 
 <p>
